--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@
 ## User settings
 xcuserdata/
 
+## OS generated files
+.DS_Store
+.DS_Store?
+._*
+
+## Pod generated files
+Podfile.lock
+Pods/
+
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
